# spectro-l

./: LICENSE  README.md  pyproject.toml
app/: acquisition.py  calibration.py  main.py  plotting.py
