[tool.poetry]
name = "spectro-l"
version = "0.1.0"
description = ""
authors = ["Jaakko Rantala <jaakko.rantala@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
